# smc-mcp

./: .gitignore  README.md  pyproject.toml
src/smc_mcp/: __init__.py  data.py  server.py
src/smc_mcp/smc/: __init__.py  fvg.py  liquidity.py  order_blocks.py  structure.py
tests/: test_smc.py
