[project]
name = "smc-mcp"
version = "0.1.0"
description = "Smart-money-concepts market analysis (BOS/CHoCH, order blocks, FVGs, liquidity sweeps) over the Model Context Protocol — for any AI agent."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akhilesh" }]
keywords = [
    "mcp", "model-context-protocol", "trading", "smart-money-concepts",
    "smc", "ict", "order-blocks", "fair-value-gap", "liquidity", "forex",
    "technical-analysis", "ai-agents", "claude",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "mcp[cli]>=1.2.0",
    "yfinance>=0.2.40",
    "pandas>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/smc-mcp"
Issues = "https://github.com/YOUR_USERNAME/smc-mcp/issues"

[project.scripts]
smc-mcp = "smc_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/smc_mcp"]
